--- a/dot_config/fish/functions/up.fish.tmpl
+++ b/dot_config/fish/functions/up.fish.tmpl
@@ -4,42 +4,42 @@ function up --description 'updates packages'
     sudo apt upgrade -y
 
     echo "Updating kubectl..."
-    curl -fsSL -o "$PREFIX/bin/kubectl" \
+    sudo curl -fsSL -o "$PREFIX/bin/kubectl" \
         "https://dl.k8s.io/release/"(curl -sL https://dl.k8s.io/release/stable.txt)"/bin/linux/arm64/kubectl"
-    chmod +x "$PREFIX/bin/kubectl"
+    sudo  chmod +x "$PREFIX/bin/kubectl"
 
     echo "Updating stern..."
     set stern_version (curl -sL "https://api.github.com/repos/stern/stern/releases/latest" | jq --raw-output ".tag_name" | sed '1s/^.//')
-    curl -fsSL -o "$PREFIX/tmp/stern.tar.gz" \
+    sudo curl -fsSL -o "$PREFIX/tmp/stern.tar.gz" \
       "https://github.com/stern/stern/releases/download/v"$stern_version"/stern_"$stern_version"_linux_arm64.tar.gz"
-    tar zxf "$PREFIX/tmp/stern.tar.gz" -C "$PREFIX/tmp"
-    mv "$PREFIX/tmp/stern" "$PREFIX/bin/stern"
-    chmod -x "$PREFIX/bin/stern"
+    sudo tar zxf "$PREFIX/tmp/stern.tar.gz" -C "$PREFIX/tmp"
+    sudo mv "$PREFIX/tmp/stern" "$PREFIX/bin/stern"
+    sudo chmod -x "$PREFIX/bin/stern"
 
     echo "Updating kustomize..."
     set kustomize_version (curl -sL "https://api.github.com/repos/kubernetes-sigs/kustomize/releases" | jq --raw-output "map(select(any(.assets[].name; contains(\"kustomize\"))))[0].tag_name" | sed 's/.*\///')
-    curl -fsSL -o "$PREFIX/tmp/kustomize.tar.gz" \
+    sudo curl -fsSL -o "$PREFIX/tmp/kustomize.tar.gz" \
       "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2F"$kustomize_version"/kustomize_"$kustomize_version"_linux_arm64.tar.gz"
-    tar zxf "$PREFIX/tmp/kustomize.tar.gz" -C "$PREFIX/tmp"
-    mv "$PREFIX/tmp/kustomize" "$PREFIX/bin/kustomize"
-    chmod +x "$PREFIX/bin/kustomize"
+    sudo tar zxf "$PREFIX/tmp/kustomize.tar.gz" -C "$PREFIX/tmp"
+    sudo mv "$PREFIX/tmp/kustomize" "$PREFIX/bin/kustomize"
+    sudo chmod +x "$PREFIX/bin/kustomize"
 
     echo "Updating calicoctl..."
     set calicoctl_version (curl -sL "https://api.github.com/repos/projectcalico/calicoctl/releases/latest" | jq --raw-output ".tag_name")
-    curl -fsSL -o "$PREFIX/bin/calicoctl" \
+    sudo curl -fsSL -o "$PREFIX/bin/calicoctl" \
       "https://github.com/projectcalico/calicoctl/releases/download/"$calicoctl_version"/calicoctl-linux-arm64"
-    chmod +x "$PREFIX/bin/calicoctl"
+    sudo chmod +x "$PREFIX/bin/calicoctl"
 
     echo "Updating flux..."
-    curl -fsSL "https://toolkit.fluxcd.io/install.sh" | bash -s "$PREFIX/bin" >/dev/null 2>&1
+    sudo curl -fsSL "https://toolkit.fluxcd.io/install.sh" | bash -s "$PREFIX/bin" >/dev/null 2>&1
 
     echo "Updating taskfile..."
     set taskfile_version (curl -sL "https://api.github.com/repos/go-task/task/releases/latest" | jq --raw-output ".tag_name" | sed '1s/^.//')
-    curl -fsSL -o "$PREFIX/tmp/taskfile.tar.gz" \
+    sudo curl -fsSL -o "$PREFIX/tmp/taskfile.tar.gz" \
       "https://github.com/go-task/task/releases/download/v"$taskfile_version"/task_linux_arm64.tar.gz"
-    tar zxf "$PREFIX/tmp/taskfile.tar.gz" -C "$PREFIX/tmp"
-    mv "$PREFIX/tmp/task" "$PREFIX/bin/task"
-    chmod +x "$PREFIX/bin/task"
+    sudo tar zxf "$PREFIX/tmp/taskfile.tar.gz" -C "$PREFIX/tmp"
+    sudo mv "$PREFIX/tmp/task" "$PREFIX/bin/task"
+    sudo chmod +x "$PREFIX/bin/task"
 
     echo "Updating fisher..."
     fisher update > /dev/null 2>&1
