--- a/dot_config/fish/functions/up.fish.tmpl
+++ b/dot_config/fish/functions/up.fish.tmpl
@@ -12,7 +12,7 @@ function up --description 'updates packages'
     set stern_version (curl -sL "https://api.github.com/repos/stern/stern/releases/latest" | jq --raw-output ".tag_name" | sed '1s/^.//')
     sudo curl -fsSL -o "/tmp/stern.tar.gz" \
       "https://github.com/stern/stern/releases/download/v"$stern_version"/stern_"$stern_version"_linux_arm64.tar.gz"
-    sudo tar zxf "/tmp/stern.tar.gz" -C "$PREFIX/tmp"
+    sudo tar zxf "/tmp/stern.tar.gz" -C "/tmp"
     sudo mv "/tmp/stern" "$PREFIX/bin/stern"
     sudo chmod -x "$PREFIX/bin/stern"
 
@@ -20,7 +20,7 @@ function up --description 'updates packages'
     set kustomize_version (curl -sL "https://api.github.com/repos/kubernetes-sigs/kustomize/releases" | jq --raw-output "map(select(any(.assets[].name; contains(\"kustomize\"))))[0].tag_name" | sed 's/.*\///')
     sudo curl -fsSL -o "/tmp/kustomize.tar.gz" \
       "https://github.com/kubernetes-sigs/kustomize/releases/download/kustomize%2F"$kustomize_version"/kustomize_"$kustomize_version"_linux_arm64.tar.gz"
-    sudo tar zxf "/tmp/kustomize.tar.gz" -C "$PREFIX/tmp"
+    sudo tar zxf "/tmp/kustomize.tar.gz" -C "/tmp"
     sudo mv "/tmp/kustomize" "$PREFIX/bin/kustomize"
     sudo chmod +x "$PREFIX/bin/kustomize"
 
@@ -37,7 +37,7 @@ function up --description 'updates packages'
     set taskfile_version (curl -sL "https://api.github.com/repos/go-task/task/releases/latest" | jq --raw-output ".tag_name" | sed '1s/^.//')
     sudo curl -fsSL -o "/tmp/taskfile.tar.gz" \
       "https://github.com/go-task/task/releases/download/v"$taskfile_version"/task_linux_arm64.tar.gz"
-    sudo tar zxf "/tmp/taskfile.tar.gz" -C "$PREFIX/tmp"
+    sudo tar zxf "/tmp/taskfile.tar.gz" -C "/tmp"
     sudo mv "/tmp/task" "$PREFIX/bin/task"
     sudo chmod +x "$PREFIX/bin/task"
 
