--- a/run_once_after_10_fisher.sh.tmpl
+++ b/run_once_after_10_fisher.sh.tmpl
@@ -11,3 +11,4 @@ fisher install jorgebucaran/spark.fish
 fisher install nickeb96/puffer-fish
 fisher install patrickf3139/fzf.fish
 fisher install wfxr/forgit
+fisher install evanlucas/fish-kubectl-completions
