--- a/dot_config/starship.toml.tmpl
+++ b/dot_config/starship.toml.tmpl
@@ -1,54 +1,42 @@
-"$schema" = 'https://starship.rs/config-schema.json'
-
-add_newline = true
-
-format = """\
-  $username\
-  $directory\
-  $kubernetes\
-  $git_branch\
-  $git_commit\
-  $git_state\
-  $git_status\
-  $character\
-  """
+format = """
+[╭─](white) $kubernetes$fill$git_branch$python$terraform$golang
+[╰─](white) $directory$character\n"""
 
 [character]
-success_symbol = "\n[❯](bold green)"
-error_symbol = "\n[✖](bold red)"
-
-[cmd_duration]
-min_time = 500
-
-[username]
-disabled = false
-show_always = false
+success_symbol = "[❯](bold green)"
+error_symbol = "[✖](bold red)"
 
 [directory]
-disabled = false
-truncation_length = 8
-truncate_to_repo = true
+format = "[ $path]($style)[$read_only]($read_only_style) "
 read_only = " "
-home_symbol = " "
+truncation_length = 3
+truncation_symbol = "…/"
+style = "blue"
+
+[git_branch]
+symbol = " "
+format = "[\\[$symbol$branch\\]]($style) "
+
+[golang]
+symbol = " "
+format = "[\\[$symbol($version )\\]]($style) "
+
+[hostname]
+style = "bold green"
 
 [kubernetes]
-disabled = false
 symbol = "󱃾 "
 format = "[\\[$symbol$context \\($namespace\\)\\]]($style) "
 style  = "bold bright-green"
+disabled = false
 
 [python]
-disabled = false
-format = '\[[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style)\]'
-symbol = " "
+symbol = " "
+format = "[\\[$symbol$pyenv_prefix($version )(\\($virtualenv\\))\\]]($style) "
 
-[git_branch]
-disabled = false
-symbol = " "
+[terraform]
+symbol = "󱁢 "
+format = "[\\[$symbol$workspace\\]]($style) "
 
-[git_commit]
-disabled = false
-commit_hash_length = 8
-only_detached = false
-style = "grey"
-tag_symbol = " "
+[username]
+style_user = "bold blue"
