--- a/run_once_after_00_init.sh.tmpl
+++ b/run_once_after_00_init.sh.tmpl
@@ -4,3 +4,10 @@
 if [ ! -d ~/.nano ]; then
     git clone https://github.com/scopatz/nanorc.git ~/.nano
 fi
+
+
+mkdir -p ~/.local/share/fonts
+cd ~/.local/share/fonts  \
+&& curl -fLO https://github.com/ryanoasis/nerd-fonts/releases/download/v3.0.2/FiraCode.tar.xz \
+&& tar -xf FiraCode.tar.xz \
+&& rm FiraCode.tar.xz
